@@ -25,15 +25,25 @@ ELSE ()
     SET (cpu any)
     SET (abi libffi)
     PLUGIN_MESSAGE ("${cpu}-${abi}")
-    CHECK_INCLUDE_FILE (ffi.h HAVE_FFI_H)
-    CHECK_INCLUDE_FILE (ffi/ffi.h HAVE_FFI_FFI_H)
-    IF (NOT HAVE_FFI_H AND NOT HAVE_FFI_FFI_H)
+    IF (PKG_CONFIG_FOUND)
+      PKG_CHECK_MODULES (LIBFFI libffi)
+      IF (LIBFFI_FOUND)
+      	PLUGIN_INCLUDE_DIRECTORIES (${LIBFFI_INCLUDE_DIRS})
+      	PLUGIN_LINK_DIRECTORIES    (${LIBFFI_LIBRARY_DIRS})
+      	PLUGIN_LINK_LIBRARIES      (${LIBFFI_LIBRARIES})
+	SET (HAVE_FFI_H 1)
+      ENDIF ()
+    ENDIF ()
+      IF (NOT LIBFFI_FOUND)
+      CHECK_INCLUDE_FILE (ffi.h HAVE_FFI_H)
+      CHECK_INCLUDE_FILE (ffi/ffi.h HAVE_FFI_FFI_H)
+      IF (NOT HAVE_FFI_H AND NOT HAVE_FFI_FFI_H)
         PLUGIN_DISABLE ()
-    ELSE ()
+     ELSE ()
         PLUGIN_LINK_LIBRARIES (ffi)
+      ENDIF ()
     ENDIF ()
   ENDIF ()
-
   PLUGIN_SOURCES ("${unix}/plugins/${plugin}/${cpu}-${abi}.c ${unix}/plugins/${plugin}/${cpu}-${abi}-asm.S")
 ENDIF ()
 
